--- a/F3/aboutus.html
+++ b/F3/aboutus.html
@@ -14,29 +14,31 @@
 
     <div class="container">
         <nav class="sidebar">
-            <a href="index.html">Home</a>
-            <a href="product.html">Product Catalog</a>
-            <a href="aboutus.html">About</a>
-            <a href="contactus.html">Contact Us</a>
-            <a href="login.html" style="margin-top: 20px; border-top: 1px solid var(--accent-color);">Login</a>
-            <a href="payment.html">Payment and Delivery Method</a>
-        </nav>
+    <a href="index.html">Home</a>
+    <a href="product.html">Product Catalog</a>
+    <a href="aboutus.html">About</a>
+    <a href="contactus.html">Contact Us</a>
+    
+    <a href="cart.html">Shopping Cart</a>
+    
+    <div style="margin-top: 20px; border-top: 1px solid var(--accent-color); padding-top: 10px;">
+        <a href="login.html">Login</a>
+        <a href="signup.html">Sign Up</a>
+        <a href="profile.html" class="profile-link">My Profile</a>
+        <a href="login.html" onclick="logoutUser()" style="color: #e57373;">Logout</a>
+    </div>
+</nav>
 
         <main class="content">
+            <h2>About Us</h2>
             <section class="about-section">
-                <h2>About Our Bakeshop</h2>
-                <p>
-                    Artisanal flavors meet elegant design. At Laicakes Bakeshop, 
-                    we specialize in handcrafted cakes that celebrate the harmony 
-                    of premium ingredients and sophisticated textures.
-                </p>
+                <h3>About Our Bakeshop</h3>
+                <p>Artisanal flavors meet elegant design. At Laicakes Bakeshop, we specialize in handcrafted cakes that celebrate the harmony of premium ingredients and sophisticated textures.</p>
+            </section>
 
-                <h2>About the Owner</h2>
-                <p>
-                    Founded at the intersection of technology and tradition, Laicakes 
-                    Bakeshop is the creative pursuit of an IT student dedicated to 
-                    mastering the art of the perfect bake.
-                </p>
+            <section class="about-section">
+                <h3>About the Owner</h3>
+                <p>Founded at the intersection of technology and tradition, Laicakes Bakeshop is the creative pursuit of an IT student dedicated to mastering the art of the perfect bake.</p>
             </section>
         </main>
     </div>
