--- a/F3/index.html
+++ b/F3/index.html
@@ -14,13 +14,20 @@
 
     <div class="container">
         <nav class="sidebar">
-            <a href="index.html">Home</a>
-            <a href="product.html">Product Catalog</a>
-            <a href="aboutus.html">About</a>
-            <a href="contactus.html">Contact Us</a>
-            <a href="login.html" style="margin-top: 20px; border-top: 1px solid var(--accent-color);">Login</a>
-            <a href="payment.html">Payment and Delivery Method</a>
-        </nav>
+    <a href="index.html">Home</a>
+    <a href="product.html">Product Catalog</a>
+    <a href="aboutus.html">About</a>
+    <a href="contactus.html">Contact Us</a>
+    
+    <a href="cart.html">Shopping Cart</a>
+    
+    <div style="margin-top: 20px; border-top: 1px solid var(--accent-color); padding-top: 10px;">
+        <a href="login.html">Login</a>
+        <a href="signup.html">Sign Up</a>
+        <a href="profile.html" class="profile-link">My Profile</a>
+        <a href="login.html" onclick="logoutUser()" style="color: #e57373;">Logout</a>
+    </div>
+</nav>
 
         <main class="content">
             <h2>Our Featured Delights</h2>
