--- a/F3/login.html
+++ b/F3/login.html
@@ -12,30 +12,33 @@
         <h1>Laicakes Bakeshop</h1>
     </header>
     <div class="container">
-        <nav class="sidebar">
-            <a href="index.html">Home</a>
-            <a href="aboutus.html">About</a>
-            <a href="contactus.html">Contact Us</a>
-        </nav>
-        <main class="content">
-            <div class="form-container">
-                <h2>Login</h2>
-                <form action="profile.html">
-                    <div class="input-group">
-                        <label>Email Address</label>
-                        <input type="email" placeholder="laica@gmail.com" required>
-                    </div>
-                    <div class="input-group">
-                        <label>Password</label>
-                        <input type="password" placeholder="Enter password" required>
-                    </div>
-                    <button type="submit" class="submit-btn">Login</button>
-                    <div class="form-footer">
-                        Don't have an account? <a href="signup.html">Sign Up here</a>
-                    </div>
-                </form>
-            </div>
-        </main>
-    </div>
+    <nav class="sidebar">
+        <a href="index.html">Home</a>
+        <a href="product.html">Product Catalog</a>
+        <a href="aboutus.html">About</a>
+        <a href="contactus.html">Contact Us</a>
+        <a href="signup.html">Sign Up</a>
+    </nav>
+    
+    <main class="content">
+        <div class="form-container">
+            <h2>Login</h2>
+            <form action="profile.html" onsubmit="loginUser()">
+                <div class="input-group">
+                    <label>Email Address</label>
+                    <input type="email" placeholder="laica@gmail.com" required>
+                </div>
+                <div class="input-group">
+                    <label>Password</label>
+                    <input type="password" placeholder="Enter password" required>
+                </div>
+                <button type="submit" class="submit-btn">Login</button>
+                <div class="form-footer" style="margin-top: 15px; text-align: center;">
+                    Don't have an account? <a href="signup.html">Sign Up here</a>
+                </div>
+            </form>
+        </div>
+    </main>
+</div>
 </body>
 </html>
