--- a/F3/product.html
+++ b/F3/product.html
@@ -3,55 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laicakes Bakeshop | Product Catalog</title>
+    <title>Catalog | Laicakes</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <img src="logo.jpeg" alt="Logo" class="logo">
-        <h1>Laicakes Bakeshop</h1>
+        <h1 id="headerTitle">Laicakes Bakeshop</h1>
     </header>
-
     <div class="container">
         <nav class="sidebar">
-            <a href="index.html">Home</a>
-            <a href="product.html">Product Catalog</a>
-            <a href="aboutus.html">About</a>
-            <a href="contactus.html">Contact Us</a>
-            <a href="login.html" style="margin-top: 20px; border-top: 1px solid var(--accent-color);">Login</a>
-            <a href="payment.html">Payment and Delivery Method</a>
-        </nav>
-
-    <div class="container">
-        <div class="catalog-grid">
-
-            <div class="product-card">
-                <img src="chocolate.png">
-                <div class="product-name">Double Chocolate Cake</div>
-                <div class="product-price">₱545.00</div>
-                <a href="#" class="buy-button">ADD TO CART</a>
-            </div>
-
-            <div class="product-card">
-                <img src="ube.png">
-                <div class="product-name">Ube Custard Cake</div>
-                <div class="product-price">₱345.00</div>
-                <a href="#" class="buy-button">ADD TO CART</a>
-            </div>
-
-            <div class="product-card">
-                <img src="rainbow.png">
-                <div class="product-name">Rainbow Buttercream Cake</div>
-                <div class="product-price">₱345.00</div>
-                <a href="#" class="buy-button">ADD TO CART</a>
-            </div>
-        </div>
+    <a href="index.html">Home</a>
+    <a href="product.html">Product Catalog</a>
+    <a href="aboutus.html">About</a>
+    <a href="contactus.html">Contact Us</a>
+    
+    <a href="cart.html">Shopping Cart</a>
+    
+    <div style="margin-top: 20px; border-top: 1px solid var(--accent-color); padding-top: 10px;">
+        <a href="login.html">Login</a>
+        <a href="signup.html">Sign Up</a>
+        <a href="profile.html" class="profile-link">My Profile</a>
+        <a href="login.html" onclick="logoutUser()" style="color: #e57373;">Logout</a>
     </div>
+</nav>
 
-    <footer>
-        <p>@ 2026 Laicakes Bakeshop</p>
-        <p>Email: laicakes@email.com | Phone: 0939-905-5656</p>
-    </footer>
+        <main class="content">
+            <div class="catalog-grid">
+                <div class="card">
+                    <img src="chocolate.png" alt="Chocolate Cake">
+                    <h3>Double Chocolate Cake</h3>
+                    <p>₱545.00</p>
+                    <button class="submit-btn">Add to Cart</button>
+                </div>
+
+                <div class="card">
+                    <img src="ube.png" alt="Ube Cake">
+                    <h3>Ube Custard Cake</h3>
+                    <p>₱345.00</p>
+                    <button class="submit-btn">Add to Cart</button>
+                </div>
+
+                <div class="card">
+                    <img src="rainbow.png" alt="Rainbow Cake">
+                    <h3>Rainbow Buttercream</h3>
+                    <p>₱345.00</p>
+                    <button class="submit-btn">Add to Cart</button>
+                </div>
+            </div>
+        </main>
+    </div>
+    <button class="theme-toggle" onclick="toggleTheme()">🌓 Switch Theme</button>
     <script src="script.js"></script>
 </body>
 </html>
