--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-</head>
-<body>
-    <h1>ASAURO</h1>
-    <h3>Laica</h3>
-
-    <a href="about.html">About</a><br>
-    <a href="bucketlist.html">Bucket List</a>
-
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>Laicakes Bakeshop</title><script defer="defer" src="/ldawebshop/static/js/main.13a42437.js"></script><link href="/ldawebshop/static/css/main.03bd1cd2.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
