--- a/ldawebshop/index.html
+++ b/ldawebshop/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+<base href="/ldawebshop/">
 <head>
     <meta charset="UTF-8">
     <title>Laicakes Bakeshop</title>
 </head>
 <body>
-    <div id="root"></div> </body>
+    <div id="root"></div> 
+</body>
 </html>
