--- a/ldawebshop/index.html
+++ b/ldawebshop/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<base href="/ldawebshop/">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laicakes Bakeshop</title>
+    <base href="%PUBLIC_URL%/">
 </head>
 <body>
     <div id="root"></div> 
